# vandockit

./: .coverage  .gitignore  CHANGELOG.md  COPYRIGHT  Makefile  README.md  convert_package.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  validate_package.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
archivematica_writer/: metadata_csv_writer.py
archivematica_writer/tests/: test_metadata_csv_writer.py
conf/: logging.conf
requirements/: dev.txt
validators/: package_validators.py
validators/tests/: test_package_validators.py
vandockit/: __main__.py  converters.py  metadata_csv_writer.py  metadata_xml_parser.py  validators.py
vandockit/tests/: conftest.py  test_converters.py  test_metadata_csv_writer.py  test_metadata_xml_parser.py  test_validators.py
vandocs_am_converter/: converters.py  metadata_csv_writer.py  metadata_xml_parser.py  package_converter.py  package_validator.py  validators.py
vandocs_am_converter/tests/: conftest.py  test_converters.py  test_metadata_csv_writer.py  test_metadata_xml_parser.py  test_package_converter.py  test_package_validator.py  test_validators.py  test_vandocs_xml_parser.py
vandocs_converter/: package_converter.py
vandocs_converter/tests/: test_package_converter.py
vandocs_parser/tests/: test_vandocs_xml_parser.py
vandocs_validator/: package_validator.py
vandocs_validator/tests/: test_package_validator.py
