[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Rule reference: https://docs.astral.sh/ruff/rules/
select = ["B", "C4", "E", "F", "I", "PTH", "UP", "W"]
ignore = ["UP031"]

[tool.ruff.lint.isort]
force-single-line = true
