[metadata]
name = artefactual-vandockit
version = 1.3.0
author = David Juhasz
author_email = djuhasz@artefactual.com
description = A Python toolkit for VanDocs transfer packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.artefactual.com/clients/cva/vandockit
project_urls =
    Bug Tracker = https://gitlab.artefactual.com/clients/cva/vandockit/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = Click

[options.entry_points]
console_scripts =
    vandockit = vandockit.__main__:main
